# duckdb-iceberg-extension

./: CMakeLists.txt  Cargo.toml  Makefile  README.md
src/: iceberg.cpp  iceberg.hpp  lib.rs  table_function.rs
